# wce-triage-v2

./: -  .gitignore  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.html  README.md  README.rst  TODO.md  bar  httpserver.sh  mypy.ini  pyproject.toml  requirements.backend.txt  requirements.txt  setup-triage.sh  setup.py
components/: computer.py  cpu.py  disk.py  memory.py  network.py  optical_drive.py  pci.py  sound.py  video.py
doc/: README.md  build-usb-stick.md  installation-server.md  overview.md  wireless.md
docs/: README.md  build-usb-stick.md  index.rst  installation-server.md  virtualbox.md
fixture/: slow.sh
http/: httpserver.py
lib/: netplan.py
ops/: diskop_restore.py  tasks.py
scripts/: .gitignore  LIVE-TRIAGE  Makefile  batch-update-wce_triage  bootstrap.sh  setup-desktop.sh  setup-wce-triage.sh  slim-usb.sh  start-network.py  update-wce-triage
scripts/setup.d/: install-assets.sh  install-chrome.sh  install-packages.sh  install-services.sh  install-wce-kiosk.sh  install-wce-triage.sh  setup-boot.sh  setup-triage-user.sh
test/: run_test.sh  test_components.py  test_disk_images.py  test_grub.py  test_ops.py  test_partitions.py  test_pplan.py
wce_triage/: README.md  __init__.py  const.py  pylama.ini  setup.py  version.py
wce_triage/api/: README.md  __init__.py  app.py  config.py  emitter.py  endpoints.txt  formatters.py  messages.py  models.py  server.py  view.py
wce_triage/backend/: README.md  __init__.py  __main__.py  app.py  app_instance.py  backend.py  cli.py  config.py  cpu_info.py  disk_portal_instance.py  dispatch_bp.py  (+23 more)
(+157 files in other folders)
